--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -25,8 +25,8 @@ theme-override : template/css/PITCHME.css
 # Logo Setting
 # https://gitpitch.com/docs/settings/logo
 #
-logo : template/img/logo.png
-logo-position : top-left
+#logo : template/img/logo.png
+#logo-position : top-left
 
 #
 # Footnote Setting
@@ -53,4 +53,6 @@ layout : center
 # https://gitpitch.com/docs/layout-features/snap-layout-slide-transitions
 #
 transition : none
+
+mathjax : TeX-MML-AM_HTMLorMML-full
 
